Install typescript, add tsconfig and move files to typesscript

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -9,6 +9,6 @@
     <h3>Transcribe Extension</h3>
     <p>Click below to open the transcription in a persistent page:</p>
     <button id="openOptionsBtn">Open transcription</button>
-    <script src="popup.js"></script>
+    <script src="popup.ts"></script>
   </body>
 </html>
