--- a/src/options/options.html
+++ b/src/options/options.html
@@ -23,11 +23,17 @@
       <h4>Settings</h4>
       <label for="languageSelect">Language:</label>
       <select id="languageSelect">
-        <option value="en" selected>English</option>
-        <option value="es">Spanish</option>
-        <option value="de">German</option>
-        <option value="fr">French</option>
+        <option value="Auto" selected>Automatic</option>
+        <option value="English">English</option>
+        <option value="Spanish">Spanish</option>
+        <option value="German">German</option>
+        <option value="French">French</option>
         <!-- add more as needed -->
+      </select>
+      <label for="taskSelect">Task:</label>
+      <select id="taskSelect">
+        <option value="transcribe" selected>Transcribe</option>
+        <option value="translate">Translate</option>
       </select>
 
       <div class="dialog-buttons">
