Iterate UI texts in the project

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Transcribe Popup</title>
+    <title>Live translator popup</title>
     <link rel="stylesheet" href="popup.css" />
   </head>
   <body>
-    <h3>Transcribe Extension</h3>
-    <p>Click below to open the transcription in a persistent page:</p>
-    <button id="openOptionsBtn">Open transcription</button>
+    <h3>Live tranlator extension</h3>
+    <p>Click below to open the extension in a separate window:</p>
+    <button id="openOptionsBtn">Open extension</button>
     <script src="popup.ts"></script>
   </body>
 </html>
