--- a/src/options/options.html
+++ b/src/options/options.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Transcribe Options</title>
+    <title>Live translator extension</title>
     <link rel="stylesheet" href="options.css" />
   </head>
   <body>
     <div class="title-container">
-      <h3>Transcribe Tab Audio</h3>
+      <h3>Live translator</h3>
       <button id="settingsBtn" title="Settings" class="float-right">⚙️</button>
     </div>
 
